--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-three/drei": "9.47.0",
     "@react-three/fiber": "8.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "0.147.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -23,6 +24,8 @@
     "vite": "^4.0.0"
   },
   "eslintConfig": {
-    "extends": ["./node_modules/standard/eslintrc.json"]
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
